
PIG-2966: Test failures on CentOS 6 because MALLOC_ARENA_MAX is not set (cheolsoo via sms)

PIG-2794: Pig test: add utils to simplify testing on Windows (jgordon via gates)

PIG-2910: Add function to read schema from outout of Schema.toString() (initialcontext via thejas)

OPTIMIZATIONS

PIG-3013: BinInterSedes improve chararray sort performance (rohini)

BUG FIXES

PIG-2828: Handle nulls in DataType.compare (aniket486)

PIG-3335: TestErrorHandling.tesNegative7 fails on MR2 (xuefuz)

PIG-3316: Pig failed to interpret DateTime values in some special cases (xuefuz)

PIG-2956: Invalid cache specification for some streaming statement (daijy)

PIG-3310: ImplicitSplitInserter does not generate new uids for nested schema fields, leading to miscomputations (cstenac via daijy)

PIG-3334: Fix Windows piggybank unit test failures (daijy)

PIG-3337: Fix remaining Window e2e tests (daijy)

PIG-3328: DataBags created with an initial list of tuples don't get registered as spillable (mwagner via daijy)

PIG-3313: pig job hang if the job tracker is bounced during execution (yu.chenjie via daijy)

PIG-3297: Avro files with stringType set to String cannot be read by the AvroStorage LoadFunc (nielsbasjes via cheolsoo)

PIG-3069: Native Windows Compatibility for Pig E2E Tests and Harness (anthony.murphy via daijy)

PIG-3291: TestExampleGenerator fails on Windows because of lack of file name escaping (dwann via daijy)

PIG-3026: Pig checked-in baseline comparisons need a pre-filter to address OS-specific newline differences (dwann via daijy)

PIG-3025: TestPruneColumn unit test - SimpleEchoStreamingCommand perl inline script needs simplification (dwann via daijy)

PIG-2955: Fix bunch of Pig e2e tests on Windows (daijy)

PIG:3302: JSONStorage throws NPE if map has null values (rohini)

PIG-3309: TestJsonLoaderStorage fails with IBM JDK 6/7 (lrangel via daijy)

PIG-3097: HiveColumnarLoader doesn't correctly load partitioned Hive table (maczech via daijy)
