@@ -534,7 +534,6 @@ public class AvroStorage extends FileInputLoadFunc implements StoreFuncInterface
                 AvroStorageLog.details("data path=" + path.toUri().toString());
                 FileSystem fs = FileSystem.get(path.toUri(), new Configuration());
                 outputAvroSchema = getAvroSchema(path, fs);
-                userSpecifiedAvroSchema = outputAvroSchema;
             } else if (name.equalsIgnoreCase("nullable")) {
                 nullable = (Boolean) value;
             } else if (name.equalsIgnoreCase("schema")) {
