@@ -16,6 +16,10 @@
  */
 package org.apache.pig.piggybank.test.storage.avro;
 
+import static org.apache.pig.builtin.mock.Storage.resetData;
+import static org.apache.pig.builtin.mock.Storage.schema;
+import static org.apache.pig.builtin.mock.Storage.tuple;
+
 import org.apache.avro.file.DataFileStream;
 import org.apache.avro.generic.GenericDatumReader;
 import org.apache.commons.logging.Log;
@@ -33,6 +37,8 @@ import org.apache.pig.backend.executionengine.ExecException;
 import org.apache.pig.backend.executionengine.ExecJob;
 import org.apache.pig.backend.executionengine.ExecJob.JOB_STATUS;
 import org.apache.pig.backend.hadoop.executionengine.mapReduceLayer.JobCreationException;
+import org.apache.pig.builtin.mock.Storage.Data;
+import org.apache.pig.data.Tuple;
 import org.apache.pig.impl.io.FileLocalizer;
 import org.apache.pig.impl.logicalLayer.FrontendException;
 import org.apache.pig.piggybank.storage.avro.AvroStorage;
@@ -181,6 +187,7 @@ public class TestAvroStorage {
     final private String testMultipleSchemas1File = getInputFile("test_primitive_types/*");
     final private String testMultipleSchemas2File = getInputFile("test_complex_types/*");
     final private String testUserDefinedLoadSchemaFile = getInputFile("test_user_defined_load_schema/*");
+    final private String testLoadwithNullValues = getInputFile("test_loadavrowithnulls.avro");
 
     @BeforeClass
     public static void setup() throws ExecException, IOException {
@@ -1074,6 +1081,39 @@ public class TestAvroStorage {
         testAvroStorage(queries);
         verifyResults(output, expected);
     }
+
+    @Test
+    // Schema for the generated avro file test_loadavrowithnulls.avro
+    // ["null",{"type":"record","name":"TUPLE_0",
+    // "fields":[
+    // {"name":"name","type":["null","string"],"doc":"autogenerated from Pig Field Schema"},
+    // {"name":"age","type":["null","int"],"doc":"autogenerated from Pig Field Schema"},
+    // {"name":"gpa","type":["null","double"],"doc":"autogenerated from Pig Field Schema"}]}]
+    public void testLoadwithNullValues() throws IOException {
+    //Input is supposed to have empty tuples
+    PigSchema2Avro.setTupleIndex(0);
+    Data data = resetData(pigServerLocal);
+    String output = outbasedir + "testLoadwithNulls";
+    deleteDirectory(new File(output));
+    String [] queries = {
+       " A = load '" +  testLoadwithNullValues + "' USING " +
+          " org.apache.pig.piggybank.storage.avro.AvroStorage(); ",
+       " B = order A by name;",
+       " store B into '" +  output +"' USING mock.Storage();"
+       };
+    testAvroStorage(queries);
+    List<Tuple> out = data.get(output);
+    assertEquals(out + " size", 4, out.size());
+
+    assertEquals(schema("name:chararray,age:int,gpa:double"), data.getSchema(output));
+
+    // sorted data ordered by name
+    assertEquals(tuple((String)null),out.get(0));
+    assertEquals(tuple((String)null),out.get(1));
+    assertEquals(tuple("calvin ellison", 24, 0.71), out.get(2));
+    assertEquals(tuple("wendy johnson", 60, 0.07), out.get(3));
+
+   }
 
     private static void deleteDirectory (File path) {
         if ( path.exists()) {
