@@ -192,6 +192,8 @@ PIG-3013: BinInterSedes improve chararray sort performance (rohini)
 
 BUG FIXES
 
+PIG-3322: AvroStorage give NPE on reading file with union as top level schema (viraj via rohini)
+
 PIG-2828: Handle nulls in DataType.compare (aniket486)
 
 PIG-3335: TestErrorHandling.tesNegative7 fails on MR2 (xuefuz)
